@@ -1,31 +1,28 @@
 package vn.com.phat.validator.field;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
 import vn.com.phat.validator.rule.RuleValidator;
 import vn.com.phat.validator.context.ValidationContext;
 import vn.com.phat.validator.ValidationError;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 
-@Getter
-@AllArgsConstructor
-public class FieldValidator<T, E> implements Validator<E> {
+public record FieldValidator<T, E>(String fieldName, List<RuleValidator<T>> rules, Function<E, T> getter) implements Validator<E> {
 
-    private final String fieldName;
-    private final List<RuleValidator<T>> rules;
-    private final Function<E,T> getter;
-
-    public List<ValidationError> validate(E data, ValidationContext<?,?> context){
-        if(rules == null) return List.of();
+    public List<ValidationError> validate(E data, ValidationContext<?, ?> context) {
+        if (rules == null || rules.isEmpty())
+            return Collections.emptyList();
         T value = getter.apply(data);
-        
-        List<ValidationError> results = new ArrayList<>(rules.size());
+
+        List<ValidationError> results = null;
         for (RuleValidator<T> rule : rules) {
             ValidationError res = rule.validate(value, context, fieldName);
             if (res != null) {
+                if (results == null) {
+                    results = new ArrayList<>();
+                }
                 results.add(res);
             }
         }
