@@ -1,31 +1,28 @@
 package vn.com.phat.validator.field;
 
-import lombok.AllArgsConstructor;
-import lombok.Getter;
 import vn.com.phat.validator.rule.IntRuleValidator;
 import vn.com.phat.validator.context.ValidationContext;
 import vn.com.phat.validator.ValidationError;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.ToIntFunction;
 
-@Getter
-@AllArgsConstructor
-public class IntFieldValidator<E> implements Validator<E> {
+public record IntFieldValidator<E>(String fieldName, List<IntRuleValidator> rules, ToIntFunction<E> getter) implements Validator<E> {
 
-    private final String fieldName;
-    private final List<IntRuleValidator> rules;
-    private final ToIntFunction<E> getter;
-
-    public List<ValidationError> validate(E data, ValidationContext<?,?> context){
-        if(rules == null) return List.of();
+    public List<ValidationError> validate(E data, ValidationContext<?, ?> context) {
+        if (rules == null || rules.isEmpty())
+            return Collections.emptyList();
         int value = getter.applyAsInt(data);
-        
-        List<ValidationError> results = new ArrayList<>(rules.size());
+
+        List<ValidationError> results = null;
         for (IntRuleValidator rule : rules) {
             ValidationError res = rule.validate(value, context, fieldName);
             if (res != null) {
+                if (results == null) {
+                    results = new ArrayList<>();
+                }
                 results.add(res);
             }
         }
